--- a/Project/app/src/main/res/layout/item_question.xml
+++ b/Project/app/src/main/res/layout/item_question.xml
@@ -36,7 +36,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -45,7 +45,8 @@
                 style="@style/TextViewStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Topic Name: " />
+                android:text="Topic Name: "
+                android:id="@+id/txt_topic_name"/>
 
             <TextView
                 android:id="@+id/question_topic_name"
@@ -53,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -83,13 +84,14 @@
                 style="@style/TextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Question Content: " />
+                android:text="Question Content: "
+                android:id="@+id/txt_content"/>
 
             <TextView
                 android:id="@+id/question_question_content"
                 style="@style/TextItemStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"/>
 
         </RelativeLayout>
 
