--- a/Project/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/app/src/main/res/navigation/mobile_navigation.xml
@@ -185,7 +185,7 @@
         tools:layout="@layout/fragment_trainee_home" >
         <action
             android:id="@+id/action_nav_trainee_home_fragment_to_doFeedbackFragment"
-            app:destination="@id/doFeedbackFragment" />
+            app:destination="@+id/do_feedback_fragment" />
     </fragment>
     <fragment
         android:id="@+id/detailClassFragment"
