--- a/Project/app/src/main/res/layout/item_enrollment.xml
+++ b/Project/app/src/main/res/layout/item_enrollment.xml
@@ -20,16 +20,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <TextView
-                style="@style/TextViewStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Trainee ID: "
-                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/txt_trainee_id"
@@ -37,7 +37,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"/>
+                android:layout_marginRight="20dp"
+                android:text="Trainee ID"/>
 
         </LinearLayout>
 
@@ -45,20 +46,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <TextView
-                style="@style/TextViewStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Trainee Name: "
-                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/txt_trainee_name"
                 style="@style/TextItemStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"/>
+                android:layout_marginRight="20dp"
+                android:text="Trainee Name" />
 
         </LinearLayout>
 
@@ -68,18 +63,12 @@
             android:orientation="horizontal">
 
             <TextView
-                style="@style/TextViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Class ID: "
-                android:textColor="@color/black"/>
-
-            <TextView
                 android:id="@+id/txt_class_id"
                 style="@style/TextItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"/>
+                android:layout_marginRight="20dp"
+                android:text="Class ID" />
 
         </LinearLayout>
 
@@ -90,18 +79,12 @@
             android:layout_marginBottom="10dp">
 
             <TextView
-                style="@style/TextViewStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Class Name: "
-                android:textColor="@color/black"/>
-
-            <TextView
                 android:id="@+id/txt_class_name"
                 style="@style/TextItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"/>
+                android:layout_marginRight="20dp"
+                android:text="Class Name" />
 
         </LinearLayout>
 
