--- a/Project/app/src/main/res/layout/item_question_in_feeback.xml
+++ b/Project/app/src/main/res/layout/item_question_in_feeback.xml
@@ -27,8 +27,7 @@
             style="@style/TextItemStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Question"
-            android:textColor="@color/black"/>
+            android:text="Question" />
     </LinearLayout>
 
 </RelativeLayout>
