--- a/Project/app/src/main/res/layout/fragment_enrollment.xml
+++ b/Project/app/src/main/res/layout/fragment_enrollment.xml
@@ -25,8 +25,7 @@
                 android:text="Enrollment List"
                 android:padding="20dp"
                 android:textSize="40sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textStyle="bold" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="48dp"
@@ -58,7 +57,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="Class Name: "
-            android:textColor="@color/black"
             android:layout_gravity="center"/>
 
         <RelativeLayout
