--- a/Project/app/src/main/res/layout/fragment_feed_back.xml
+++ b/Project/app/src/main/res/layout/fragment_feed_back.xml
@@ -24,8 +24,7 @@
                 android:text="List Feedback"
                 android:padding="20dp"
                 android:textSize="40sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textStyle="bold" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="48dp"
