--- a/Project/app/src/main/res/layout/item_topic_in_feeback.xml
+++ b/Project/app/src/main/res/layout/item_topic_in_feeback.xml
@@ -25,8 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="Topic "
-                android:textColor="@color/black"/>
+                android:text="Topic "/>
 
         </LinearLayout>
 
