--- a/Project/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/app/src/main/res/navigation/mobile_navigation.xml
@@ -216,6 +216,10 @@
         android:id="@+id/do_feedback_fragment"
         android:name="com.gaf.project.fragment.DoFeedbackFragment"
         android:label="fragment_do_feedback"
-        tools:layout="@layout/fragment_do_feedback" />
+        tools:layout="@layout/fragment_do_feedback" >
+        <action
+            android:id="@+id/action_do_feedback_fragment_to_nav_trainee_home_fragment"
+            app:destination="@id/nav_trainee_home_fragment" />
+    </fragment>
 
 </navigation>
