--- a/Project/app/src/main/res/layout/fragment_do_feedback.xml
+++ b/Project/app/src/main/res/layout/fragment_do_feedback.xml
@@ -2,10 +2,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:fillViewport="false"
     tools:context=".fragment.DoFeedbackFragment">
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -168,21 +168,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:nestedScrollingEnabled="false"
+        android:layout_height="match_parent"
         android:layout_margin="20dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_answer_in_feedback_trainee"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/rcv_answer_in_feedback_trainee"
             />
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:gravity="center">
 
         <Button
