--- a/Project/app/src/main/res/layout/fragment_add_class.xml
+++ b/Project/app/src/main/res/layout/fragment_add_class.xml
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:paddingLeft="5dp"
-            android:inputType="number"
+            android:inputType="text"
             android:imeOptions="actionDone"
             android:id="@+id/txt_capacity"
             android:layout_gravity="center"
@@ -109,7 +109,7 @@
             android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
-            <EditText
+            <TextView
                 android:id="@+id/txt_start_date"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
@@ -160,7 +160,7 @@
             android:background="@drawable/background_common_box"
             android:orientation="horizontal">
 
-            <EditText
+            <TextView
                 android:id="@+id/txt_end_date"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
