--- a/Project/app/src/main/res/layout/item_answer.xml
+++ b/Project/app/src/main/res/layout/item_answer.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -13,7 +12,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/postion_topic"
             android:text="1" />
         <TextView
             android:layout_width="wrap_content"
@@ -23,11 +21,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
-            android:id="@+id/postion_answer"
             />
 
         <TextView
-            android:id="@+id/question_do_feedback"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="The training objective"
@@ -38,11 +34,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
         >
 
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -52,7 +52,6 @@
                     android:layout_alignParentStart="true"
                     android:id="@+id/radio_strongly_disagree"
                     android:layout_width="wrap_content"
-
                     android:layout_height="wrap_content"
                     android:text="Strongly Disagree" />
 
@@ -75,6 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="85dp"
                     android:text="Disagree" />
 
                 <RadioButton
@@ -89,6 +89,6 @@
             </RelativeLayout>
 
 
-
+        </RadioGroup>
     </LinearLayout>
 </LinearLayout>
